Fix clipping
Added padding to the bottom of the main section and set a max height for
the trending section so that the trending section won't clip below the
main section

--- a/style.scss
+++ b/style.scss
@@ -271,6 +271,7 @@ main {
     gap: 24px;
     padding: 24px;
     min-height: 75vh;
+    padding-bottom: 48px;
     > div:last-child {
         display: grid;
         grid-template-rows: 1fr 1fr;
@@ -301,6 +302,7 @@ main {
             }
         }
         > div:last-child {
+            max-height: 420px;
             #trendingCardBox {
                 display: grid;
                 overflow: auto;
